legibility fixed

--- a/main.css
+++ b/main.css
@@ -114,7 +114,7 @@
 			margin-bottom:10px;
 			text-align:center;
 			font-family:'Lato',sans-serif;
-			font-weight:400;
+			font-weight:300;
 			color:#bbb;
 			padding-top:20px;
 			border-top:1px solid #333;
@@ -164,7 +164,7 @@
 			color: white;
 			font-family: "Lato", courier;
 			font-size: 1.2em;
-			font-weight: 100;
+			font-weight: 300;
 			text-align: left;
 			background-color: rgba(0, 0, 0, 0.4);
 			opacity: 0;
@@ -302,5 +302,5 @@
 			.en p {
 			font-size: 1em;
 			font-weight: 300;
-		}
+			}
 		}
